--- a/config_template/config_template_groups_rule_set_tun_fakeip.json
+++ b/config_template/config_template_groups_rule_set_tun_fakeip.json
@@ -5,9 +5,9 @@
   },
   "experimental": {
     "clash_api": {
-      "external_controller": "127.0.0.1:9090",
+      "external_controller": "127.0.0.1:30572",
       "external_ui": "ui",
-      "secret": "",
+      "secret": "bashcurd",
       "external_ui_download_url": "https://mirror.ghproxy.com/https://github.com/MetaCubeX/metacubexd/archive/refs/heads/gh-pages.zip",
       "external_ui_download_detour": "direct",
       "default_mode": "rule"
